adding cookies - server side dev

--- a/basic-auth/public/index.html
+++ b/basic-auth/public/index.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
-    <h1>hello basic auth</h1>
+    <h1>Index html page</h1>
+    <p>content for index page</p>
   </body>
 </html>
